# fedramp-20x-ksi-action

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  criterion_addition.md
.github/workflows/: ci.yml
action/src/: check_run.py  detect.py  evaluate.py  evidence.py  frmr_loader.py  inventory.py  main.py
action/src/ksi/cna/rnt/: __init__.py  evaluator.py  evidence.py
action/src/ksi/cna/shared/: network_inventory.py
data/frmr/: CURRENT.txt  README.md
docs/: PORTING-FROM-ORIGINAL.md
shared/: __init__.py  constants.py  constants_cna.py  schemas.py  schemas_network.py
tests/: __init__.py  test_check_run.py  test_detect.py  test_evidence.py  test_frmr_loader.py  test_inventory.py
