[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedramp-20x-ksi-action"
version = "0.1.0"
description = "GitHub Action for FedRAMP 20x KSI evaluation against Terraform IaC. No vendor server — runs entirely in customer GitHub Actions runners."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Boundera"},
]
maintainers = [
    {name = "Boundera Engineering", email = "oss@boundera.io"},
]
keywords = ["fedramp", "fedramp-20x", "ksi", "compliance", "terraform", "iac", "github-action"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "python-hcl2>=4.3.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Boundera/fedramp-20x-ksi-action"
Repository = "https://github.com/Boundera/fedramp-20x-ksi-action"
Issues = "https://github.com/Boundera/fedramp-20x-ksi-action/issues"
Documentation = "https://github.com/Boundera/fedramp-20x-ksi-action#readme"

[project.scripts]
fedramp-action = "action.src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["action*", "shared*"]

[tool.setuptools.package-data]
"*" = ["data/frmr/*.json", "data/frmr/CURRENT.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
